# centrl

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  biome.json  go.mod  go.sum  multitool.lock.json  rules_proto_config.yaml
.github/workflows/: auto-merge-bcr.yaml  ci.yaml  deploy-and-merge-bcr-pr.yaml  publish.yaml  release.yaml  release_prep.sh  release_ruleset.yaml  trigger-via-bcr.yml  update-bcr-submodule.yaml
app/api/: .gitignore  BUILD.bazel  Cargo.toml  INTEGRATION.md  README.md  api.env  build.rs  deploy.sh  wrangler.toml
app/api/src/: lib.rs  registry.rs  routes.rs
app/bcr/: BUILD.bazel  app.js  app.soy  autocompletematcher.js  body.js  clipboard.js  common.js  contentcomponent.js  contentselect.js  documentation.js  documentation_search.js  format.js  githubsourcefile.js  heap.js  home.js  index.html  language.js  main.js  maintainers.js  maintainers.soy  markdown.js  module_search.js  modules.js  mvs.js  mvs_tree.js  octicons.soy  presubmit.js  primer.css  registry.js  registry.soy  registry_test.js  search.js  selectnav.js  settings.js  settings.soy  shiki.d.ts  starlark.js  starlark_test.js  style.closure.css  style.css  (+5 more)
bazel_tools/biome/: biome.bzl
bazel_tools/formatting/: biome.bzl
bazel_tools/rust/: BUILD.bazel  README.md  proto_rust_library.bzl  proto_rust_library.star  protoc-gen-prost-serde.star  protoc-gen-prost.star  protoc-gen-tonic.star  pwd_replace_test.sh
blaze/worker/: BUILD.bazel  worker_protocol.proto
cmd/bazelhelpcompiler/: BUILD.bazel  bazelhelpcompiler.go  parse_test.go
cmd/bazelhelpregistrycompiler/: BUILD.bazel  bazelhelpregistrycompiler.go
cmd/bzlcompiler/: BUILD.bazel  bzlcompiler.go  config.go  extract.go  extract_test.go  files.go  main.go  server.go
cmd/bzlcompiler/tests/: example.bzl
cmd/cfdeploy/: BUILD.bazel  main.go
cmd/codesearch/: BUILD.bazel  main.go
cmd/codesearchcompiler/: BUILD.bazel  main.go
cmd/colorcompiler/: BUILD.bazel  colorcompiler.go
cmd/documentationcompiler/: BUILD.bazel  main.go
cmd/documentationregistrycompiler/: BUILD.bazel  main.go
cmd/modulecompiler/: BUILD.bazel  modulecompiler.go
cmd/moduleregistrysymbolscompiler/: BUILD.bazel  main.go
cmd/moduleversioncompiler/: BUILD.bazel  moduleversioncompiler.go
cmd/octiconcompiler/: BUILD.bazel  octiconcompiler.go
cmd/registrycompiler/: BUILD.bazel  registrycompiler.go
cmd/releasecompiler/: BUILD.bazel  releasecompiler.go
cmd/releaseserver/: BUILD.bazel  main.go
cmd/renderer/app/: BUILD.bazel  _index.html  app.js  app.soy  index.html  main.js  registry.soy
cmd/renderhtml/: BUILD.bazel  html.bzl  main.go
cmd/sitemapcompiler/: BUILD.bazel  main.go  sitemapcompiler.go
cmd/stardoccompiler/: BUILD.bazel  main.go
cmd/starlarkcompiler/: BUILD.bazel  config.go  extract.go  main.go  server.go
cmd/starlarkcompiler/tests/: BUILD.bazel
cmd/statichtmlcompiler/: BUILD.bazel  main.go
data/: BUILD.bazel  octicons.json
data/be/: BUILD.bazel  gen_be_cpp_stardoc_proto.binaryproto  gen_be_java_stardoc_proto.binaryproto  gen_be_proto_stardoc_proto.binaryproto  gen_be_python_stardoc_proto.binaryproto  gen_be_shell_stardoc_proto.binaryproto
data/dummy/: BUILD.bazel
data/starlark/: BUILD.bazel
language/bcr/: BUILD.bazel  archive_override.go  bazel.go  bazel_release_cache.go  bazel_version.go  bcr.go  config.go  cycle.go  git_override.go  github.go  graph.go  lifecycle.go  local_path_override.go  metadata.go  module.go  module_attestations.go  module_commit.go  module_dependency.go  module_dependency_cycle.go  module_id.go  module_maintainer.go  module_metadata.go  module_presubmit.go  module_registry.go  module_source.go  module_version.go  mvs.go  presubmit.go  registry.go  registry_backup.go  registry_backup_test.go  repository.go  repository_metadata.go  repository_metadata_cache.go  repository_test.go  resource_status_cache.go  single_version_override.go  source.go  stardoc.go
pkg/attestationsjson/: BUILD.bazel  attestationsjson.go
pkg/cf/: BUILD.bazel  README.md  assets.go  assets_test.go  client.go  pages.go  pages_test.go  workers.go  workers_test.go
pkg/codesearch/: BUILD.bazel  codesearch.go
pkg/css/: BUILD.bazel  identifier.go
pkg/fsutil/: BUILD.bazel  fsutil.go
pkg/gh/: BUILD.bazel  gh.go  url.go  url_test.go
pkg/git/: BUILD.bazel  git.go
pkg/gl/: BUILD.bazel  gl.go
pkg/htmlrenderer/: BUILD.bazel  assets.go  htmlrenderer.go
pkg/metadatajson/: BUILD.bazel  metadatajson.go
pkg/modulebazel/: BUILD.bazel  modulebazel.go  predeclared.go  starlark.go
pkg/netutil/: BUILD.bazel  netutil.go
pkg/paramsfile/: BUILD.bazel  stringslice.go
pkg/presubmityml/: BUILD.bazel  presubmityml.go
pkg/protoutil/: BUILD.bazel  delimited.go  io.go
pkg/repositorymetadatajson/: BUILD.bazel  repositorymetadatajson.go
pkg/sourcejson/: BUILD.bazel  sourcejson.go
pkg/stardoc/: BUILD.bazel  label.go  stardoc.go  symbols.go
pkg/status/: BUILD.bazel  status.go
rules/: archive_override.bzl  bazel_version.bzl  deploy.bzl  git_override.bzl  local_path_override.bzl  module_attestations.bzl  module_commit.bzl  module_dependency.bzl  module_dependency_cycle.bzl  module_maintainer.bzl  module_metadata.bzl  module_presubmit.bzl  module_registry.bzl  module_source.bzl  module_version.bzl  octicons_closure_template_compile.bzl  providers.bzl  release.bzl  repository_metadata.bzl  semver.bzl  semver_test.bzl  serve.bzl  single_version_override.bzl
stardoc_output/: BUILD.bazel  stardoc_output.pb.go  stardoc_output.proto
tools/: BUILD.bazel  README.md  workspace_status.sh
tools/rust/: Cargo.toml
tools/rust/src/: lib.rs
