load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@build_stack_rules_proto//rules:proto_compile_assets.bzl", "proto_compile_assets")
load("@build_stack_rules_proto//rules:proto_gazelle.bzl", "proto_gazelle")
load("//bazel_tools/formatting:biome.bzl", "biome_format")

exports_files([
    "rules_proto_config.yaml",
    "protobuf_javascript.patch",
])

# ----------------------------------------------------
# Gazelle
# ----------------------------------------------------
#
# -- Gazelle language "walk" ---
#
# -- Gazelle language "go" ---
# gazelle:prefix github.com/bazel-contrib/bcr-frontend
# gazelle:go_generate_proto false
#
# -- Gazelle language "protobuf" ---
# gazelle:proto_language go enable true
#

gazelle_binary(
    name = "gazelle-custom",
    languages = [
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "@build_stack_rules_proto//language/protobuf",
    ],
    visibility = ["//visibility:public"],
)

# ProTip: `bazel run //:gazelle` to update BUILD files
proto_gazelle(
    name = "gazelle",
    cfgs = ["//:rules_proto_config.yaml"],
    external = "static",
    gazelle = "//:gazelle-custom",
)

gazelle_binary(
    name = "gazelle-bcr",
    languages = ["//language/bcr"],
    visibility = ["//visibility:public"],
)

bcr_exclude_dirs = [
    ".*",
    "app",
    "blaze",
    "build",
    "cmd",
    "language",
    "pkg",
    "rules",
    "thirdparty",
    "stardoc_output",
    "tools",
]

gazelle(
    name = "bcr",
    args = [
        "--resource-status-set-file=$BUILD_WORKING_DIRECTORY/resources.json",
        "--repository-metadata-set-file=$BUILD_WORKING_DIRECTORY/repository-metadata.json",
        "--bazel-release-set-file=$BUILD_WORKING_DIRECTORY/bazel-releases.json",
        "--registry-root=data/bazel-central-registry",
        "--registry-url=https://registry.bazel.build",
        "--blacklisted_url=",
        "--exclude=.cache",  # exists in CI?
        "--exclude=$HOME",  # exists in CI?
        "--exclude=modules",
    ] + ["--exclude=" + dir for dir in bcr_exclude_dirs],
    gazelle = "//:gazelle-bcr",
)

# ProTip: bazel run //:proto_assets (to regenerate .pb.go files)
#
proto_compile_assets(
    name = "proto_assets",
    deps = [
        "//build/stack/bazel/help/v1:bhpb_go_compiled_sources",
        "//build/stack/bazel/registry/v1:bzpb_go_compiled_sources",
        "//build/stack/bazel/symbol/v1:sympb_go_compiled_sources",
        "//build/stack/centrl/render/v1:rnpb_go_compiled_sources",
        "//build/stack/livegrep/v1:livegrep_go_compiled_sources",
        "//build/stack/starlark/v1beta1:v1beta1_go_compiled_sources",
        "//stardoc_output:stardoc_output_go_compiled_sources",
    ],
)

# ProTip: `bazel run //:format` to format css,js,html files
#
# NOTE: .soy files have no formatter - ask AI to do it
biome_format(
    name = "format",
)

# ProTip: `bazel run //:format.check` to apply additional lint checks, but these
# are just suggestions, they are not madatory.
biome_format(
    name = "format.check",
    command = "check",
)
