"bazel module file for the bcr-frontend app(s)"

module(
    name = "bcr-frontend",
    version = "0.0.0",
    compatibility_level = 1,
)

# core dependencies
include("//bazel_tools/deps:bcr.MODULE.bazel")

# domain-specific dependencies
include("//bazel_tools/deps:tools.MODULE.bazel")
include("//bazel_tools/deps:go.MODULE.bazel")
include("//bazel_tools/deps:rust.MODULE.bazel")

# dependencies used for stardoc generation
include("//data:bazel_tools.MODULE.bazel")
include("//data:generated.MODULE.bazel")
