load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules:proto_compiled_sources.bzl", "proto_compiled_sources")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@stackb_rules_closure//closure/protobuf:defs.bzl", "closure_jspb_library")
load("//bazel_tools/rust:proto_rust_library.bzl", "proto_rust_library")

proto_library(
    name = "stardoc_output_proto",
    srcs = ["stardoc_output.proto"],
    visibility = ["//visibility:public"],
)

proto_compiled_sources(
    name = "stardoc_output_go_compiled_sources",
    srcs = ["stardoc_output.pb.go"],
    output_mappings = ["stardoc_output.pb.go=github.com/stackb/centrl/stardoc_output/stardoc_output.pb.go"],
    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
    proto = "stardoc_output_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "stardoc_output",
    srcs = ["stardoc_output.pb.go"],
    importpath = "github.com/stackb/centrl/stardoc_output",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)

proto_compile(
    name = "stardoc_output_js_proto",
    outputs = ["stardoc_output.js"],
    plugins = ["@stackb_rules_closure//closure/protobuf:protoc-gen-js"],
    proto = "stardoc_output_proto",
)

closure_jspb_library(
    name = "stardoc_output_js",
    srcs = [":stardoc_output_js_proto"],
    internal_descriptors = [":stardoc_output_proto"],
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "stardoc_output_proto_rs",
    outputs = [
        "stardoc_output.rs",
        "stardoc_output.serde.rs",
    ],
    plugins = [
        "//bazel_tools/rust:protoc-gen-prost",
        "//bazel_tools/rust:protoc-gen-prost-serde",
    ],
    proto = "stardoc_output_proto",
    verbose = False,
)

proto_rust_library(
    name = "stardoc_output_rs",
    srcs = [":stardoc_output_proto_rs"],
    pkg = "stardoc_output",
    visibility = ["//visibility:public"],
)
