load("@rules_rust//rust:defs.bzl", "rust_library")
# load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")

rust_library(
    name = "centrl_api_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2021",
    deps = [
        "@crates//:flate2",
        "@crates//:prost",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:worker",
    ],
)

# rust_wasm_bindgen(
#     name = "centrl_api_wasm",
#     target = "bundler",
#     wasm_file = ":centrl_api_lib",
# )

# # Deployment helper
# sh_binary(
#     name = "deploy",
#     srcs = ["deploy.sh"],
#     data = [
#         ":centrl_api_wasm",
#         "wrangler.toml",
#     ],
# )
